-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.471 2009-04-14 02:03:20 remko Exp $
-----------------------------------------------------------------------------------------

2009-04-14	remko
	* psxy[z].c:		Bug fix in -F option: should only check from 2nd record onwards
				(n > 0), otherwise crash when using xx[n-1].

2009-04-13	remko
	* gmt_map.c (GMT_map_init_{albers,econic}):	Fixed inability to determine projection
				pole when central_meridian and western boundary are the same.

2009-04-11	remko
	* gmt.h, gmtmath.c, grdmath.c:	Added MOD function (remainder after floored division,
				Knuth style). This is in constrast to FMOD which gives the
				remainder after (horror) truncated division.
	* gmtmath.c:		For check if argument is file: remove suffix ?fields first.

2009-04-10	remko
	* Makefile, configure.ac, makegmt.macros.in:	Moved definition of SUPPL from Makefile
				to makegmt.macros.in. No more need to use .skip file for skipped
				supplements (mex, sph, xgrid).

2009-04-09	pwessel
	* psxy[z].c:		Added new option -F to detect breaks in lines based on user
				criteria on what constitutes a gap in continuity.
	* gmt_support.c:	Added support functions for the -F option.
	
2009-04-08	pwessel
	* gmt_support.c:	The 3-D view -E option used in many programs (such as psxyz)
				could not handle exponential notations.
	* gmt_init.c:		Tke NAN_RECORDS = skip|pass setting now also applies to binary input.
				
				
2009-04-07	remko
	* configure.ac:		Auto detect octave and/or matlab directories.
				Do not say "yes" to compilation when supplement not available.

2009-04-05	pwessel
	* mgd77/mgd77manage.c:		The -D option would remove original attributes.  Now
				both original and revised attributes are carried in memory.
				This problem also affected mgd77convert -FC if used on a
				file after mgd77manage -D had been run.
2009-03-31	remko